[package]
name = "gravitate"
version = "8.0.0"
edition = "2021"
publish = true
authors = [ "Mark Summerfield <mark@qtrac.eu>",]
include = [ "Cargo.toml", "src/**/*.rs", "images/*",]
description = "A SameGame/TileFall-like game written in Rust/FLTK."
homepage = "https://github.com/mark-summerfield/gravitate-rs"
readme = "README.md"
keywords = [ "game", "samegame", "tilefall", "fltk"]
categories = ["games" ]
license = "GPL-3.0-or-later"

[badges.maintenance]
status = "passively-maintained"

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
chrono = "^0.4"
dirs = "^4"
fltk = { version = "^1.2", features = ["no-pango",], git = "https://github.com/fltk-rs/fltk-rs" }
num = "^0.4"
rand = { version = "^0.8", features = ["alloc"] }
rust-ini = "^0.17"
state = "^0.5"
thousands = "^0.2.0"
